# MarkdownScraper

./: app.py  pyproject.toml  scraper.py
static/: script.js
templates/: index.html
